improved swagger doc; add assets doc;
